feat: added AnimeScreen app title and favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>T3A2-B</title>
+    <title>AnimeScreen</title>
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png">
     <script async await type="module" src="/src/main.jsx"></script>
   </head>
   <body>
