--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AnimeScreen</title>
-    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png">
+    <!-- Favicon from Flaticon.com' -->
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png"> 
     <script async await type="module" src="/src/main.jsx"></script>
   </head>
   <body>
